[package]
name = "wsl2-ssh-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
log = { version = "0.4.28", features = ["std"] }
